--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,8 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
- - schedule: "00 10 * * *"
+ schedule: 
+  - cron: "00 10 * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
