--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,12 +6,12 @@ name: CI
 # events but only for the master branch
 on:
  schedule: 
-  - cron: "00 10 * * *"
+  - cron: "56 11 * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  runscript:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
