--- a/.github/workflows/RunScript.yml
+++ b/.github/workflows/RunScript.yml
@@ -7,7 +7,7 @@ name: RunScript
 # events but only for the master branch
 on:
  schedule: 
-  - cron: "15 17 * * *"
+  - cron: "40 17 * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -16,7 +16,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-    - uses: r-lib/actions/setup-r@v1
-      with:
-       r-version: '3.5.3' # The R version to download (if necessary) and use.
-    - run: Rscript ./scripts/parametricByState.R
+      - uses: actions/checkout@v2
+      - uses: r-lib/actions/setup-r@v1
+        with:
+          r-version: '3.5.3' # The R version to download (if necessary) and use.
+      - run: Rscript $GITHUB_WORKSPACE/parametricByState.R
