--- a/.github/workflows/RunScript.yml
+++ b/.github/workflows/RunScript.yml
@@ -7,24 +7,21 @@ name: RunScript
 # events but only for the master branch
 on:
  schedule: 
-  - cron: "25 21 * * *"
+  - cron: "45 09 * * *"
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   runscript:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
         with:
-          r-version: '3.5.3' # The R version to download (if necessary) and use.
+          r-version: '3.5.3'
       - run: sudo apt-get install -y libxml2-dev libcurl4-openssl-dev libssl-dev
       - run: Rscript /home/runner/work/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/parametricbyState.R
       - run: |
-          git config --global user.name 'Bryan Jonas'
-          git config --global user.email 'bryan.jonas@westpoint.edu'
+          git config --global user.name 'nick3703'
+          git config --global user.email 'nicholasjsclark@gmail.com'
           git add *
           git commit -am "Automated Push"
           git push
