--- a/.github/workflows/RunScript.yml
+++ b/.github/workflows/RunScript.yml
@@ -19,13 +19,23 @@ jobs:
           r-version: '3.5.3'
       - run: sudo apt-get install -y libxml2-dev libcurl4-openssl-dev libssl-dev
       - run: Rscript /home/runner/work/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/JHU_Download.R
-      - run: Rscript /home/runner/work/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/parametricbyState.R
-      - run: Rscript /home/runner/work/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/RtByCounty.R
-      - run: |
+        - run: |
           git config --global user.name 'nick3703'
           git config --global user.email 'nicholasjsclark@gmail.com'
           git fetch
           git add *
-          git commit -am "Automated Push"
+          git commit -am "Push JHU"
+          git push
+      - run: Rscript /home/runner/work/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/parametricbyState.R
+        - run: |
+          git fetch
+          git add *
+          git commit -am "parametricbyState Push"
+          git push
+      - run: Rscript /home/runner/work/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/Parametric-Modeling-for-Time-Varying-Reproducibility-Number/RtByCounty.R
+      - run: |
+          git fetch
+          git add *
+          git commit -am "rtByCounty Push"
           git push
 
